# solana-copy-sniper-trading-bot

./: .gitignore  AI_WRITE_TEST.md  Cargo.toml  auto_fix_unmatched_brace.py  auto_fix_zeroslot_and_reverse_flag.py  cargo_check_progress.json  cargo_progress.py  fix_retry_wrapper_recursion.py  fix_sniper_bot_stages.py  patch_file_blacklist.py  patch_hot_update_file_blacklist.py  patch_permanent_blacklist.py  patch_retry_logic_for_buys.py  patch_universal_gates.py  sonar-project.properties  troubleshoot.py
.github/workflows/: main.yml  rust-ci.yml
birdeye_ws_liquidity_guard_full_patch/: CARGO_TOML_APPEND.txt  ENV_EXAMPLE_APPEND.txt  PATCH_sniper_bot.diff
birdeye_ws_liquidity_guard_full_patch/src/: liquidity_guard.rs  metrics_store.rs
closed_env_dryrun_patch/: ENV_EXAMPLE_APPEND.txt  PATCH_sniper_executor.diff  README_CLOSED_ENV.md
closed_env_dryrun_patch/src/execution/: mod.rs
closed_env_dryrun_patch/src/ingest/: ws_tap.rs
scripts/: fix_clippy_pass_1.sh  quiet_scaffold.sh
src/: env.example  lib.rs  main.rs
src/block_engine/: token.rs  tx.rs
src/common/: cache.rs  config.rs  logger.rs  mod.rs  rpc_client.rs  rpc_failover.rs  timeseries.rs
src/dex/: pump_fun.rs  pump_swap.rs  pump_swap.rs.bak  raydium_launchpad.rs
src/error/: mod.rs
src/features/: blacklist.rs  gates.rs  mev.rs  mod.rs  models.rs  telegram.rs  withdraw.rs
src/processor/: mod.rs  mod.rs.bak  monitor.rs  risk_management.rs  selling_strategy.rs  sniper_bot.rs  sniper_bot.rs.bak  sniper_bot.rs.bak-1762967515  sniper_bot.rs.bak-1762967983  sniper_bot.rs.bak_20251113174742  sniper_bot.rs.bak_hotupdate  sniper_bot.rs.bak_retry  sniper_bot.rs.bak_retry_fix  sniper_bot.rs.broken_backup  transaction_parser.rs  transaction_retry.rs
src/universal/: blacklist.rs  dry_run.rs  executor.rs  gates.rs  mev.rs  mod.rs  models.rs  telegram.rs  withdraw.rs
src/universal/gates/: liquidity.rs
src/universal/positions/: error.rs  mod.rs  registry.rs  types.rs
src/universal/wallet_config/: mod.rs  types.rs
tests/: positions_tests.rs
