[package]
name = "solana-vntr-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Solana / Anchor ---
solana-client = { version = "2.1.14" }
solana-account-decoder = "2.1.14"
solana-program-pack = "2.1.14"
solana-sdk = { version = "2.1.14" }
solana-transaction-status = { version = "2.1.14" }
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = "=0.31.0"

# --- SPL / token ---
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.13.0"

# --- gRPC / Yellowstone ---
yellowstone-grpc-client = "4.1.0"
yellowstone-grpc-proto  = "4.1.1"

# --- Tokio / async / ws ---
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio-stream = "0.1.11"

# --- HTTP / env / logging ---
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls", "gzip"] }
dotenv = "0.15"
envy = "0.4"
log = "0.4"

# --- Serde / JSON ---
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"

# --- Utils & misc ---
chrono = "0.4.26"
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.62"
base64 = "0.13"
rand = "0.8.5"
borsh = { version = "1.5.3" }
borsh-derive = "1.5.3"
colored = "3.0.0"
lazy_static = "1.5.0"
bs58 = "0.4"
bs64 = "0.1.2"
bincode = "1.3.3"
tokio-js-set-interval = "1.3.0"
bytemuck = "1.21.0"
indicatif = "0.17.8"
tracing = "0.1.40"
futures-util = "0.3.30"
maplit = "1.0.2"
futures = "0.3.31"
teloxide = { version = "0.12", features = ["macros"] }
dashmap = "5.5.3"
lru = "0.10.0"
once_cell = "1.21.3"

toml = "0.8"
[features]
default = []
runtime_cfg = []
universal_gates = []
position_tracking = []
execution_controls = []
auto_withdrawals = []
telegram_control = []
control_api = []
dryrun_closed_env = []
zeroslot = []
wip = []
